chore: broad rule to remove top margin from first p tag in field, to prevent misalignment with inline labels
Refs: UNO-603

--- a/html/themes/custom/common_design_subtheme/css/styles.css
+++ b/html/themes/custom/common_design_subtheme/css/styles.css
@@ -369,3 +369,8 @@ footer.cd-author {
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.field__item > p:first-child {
+  margin-top: 0;
+}
